--- a/package.json
+++ b/package.json
@@ -79,18 +79,10 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.8",
-    "@types/arcgis-js-api": "^4.23.1",
-    "@types/react": "^18.0.9",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.0.5",
-    "axios": "^0.21.2",
-    "classnames": "^2.2.6",
-    "esri-loader": "^3.5.0",
-    "helper-toolkit-ts": "^1.1.13",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2",
-    "redux": "^4.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.1.0"
   },
   "browserslist": [
     "defaults"
