--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.6",
     "@types/classnames": "^2.2.10",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^26.0.15",
     "@types/react-redux": "^7.1.16",
     "@types/react-responsive": "^8.0.2",
     "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "@vue/preload-webpack-plugin": "^2.0.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.0",
@@ -69,7 +69,6 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.7.1",
     "source-map-loader": "^3.0.0",
-    "tailwindcss": "^3.0.24",
     "terser-webpack-plugin": "^5.1.3",
     "typescript": "^4.3.4",
     "url-loader": "^4.1.1",
@@ -81,6 +80,7 @@
   "dependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.0.5",
+    "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.1.0"
   },
