--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "webpack serve --mode development --open",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,json}": [
@@ -38,6 +40,13 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.6",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/blocks": "^7.0.24",
+    "@storybook/react": "^7.0.24",
+    "@storybook/react-webpack5": "^7.0.24",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/classnames": "^2.2.10",
     "@types/d3": "^7.4.0",
     "@types/jest": "^26.0.15",
@@ -69,6 +78,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.7.1",
     "source-map-loader": "^3.0.0",
+    "storybook": "^7.0.24",
     "terser-webpack-plugin": "^5.1.3",
     "typescript": "^4.3.4",
     "url-loader": "^4.1.1",
