--- a/package.json
+++ b/package.json
@@ -31,15 +31,7 @@
   },
   "homepage": "https://github.com/vannizhang/react-redux-boilerplate",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/runtime": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.22.5",
     "@storybook/addon-essentials": "^7.0.24",
     "@storybook/addon-interactions": "^7.0.24",
     "@storybook/addon-links": "^7.0.24",
@@ -47,45 +39,20 @@
     "@storybook/react": "^7.0.24",
     "@storybook/react-webpack5": "^7.0.24",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/classnames": "^2.2.10",
     "@types/d3": "^7.4.0",
     "@types/jest": "^26.0.15",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-responsive": "^8.0.2",
-    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^3.0.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
     "husky": "^8.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
-    "mini-css-extract-plugin": "^1.6.0",
-    "postcss": "^8.3.5",
-    "postcss-import": "^15.1.0",
-    "postcss-loader": "^6.1.0",
-    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.7.1",
-    "source-map-loader": "^3.0.0",
     "storybook": "^7.0.24",
-    "terser-webpack-plugin": "^5.1.3",
-    "typescript": "^4.3.4",
-    "url-loader": "^4.1.1",
-    "webpack": "5.73",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "4.10",
-    "webpack-dev-server": "^4.9.3"
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "@types/react": "^18.2.14",
