--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "react-redux-boilerplate",
+  "name": "@vannizhang/react-d3-charts",
   "version": "1.0.0",
   "description": "Start React+Redux project with TypeScript in an easier and faster way",
   "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests",
-    "start": "webpack serve --mode development --open",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "prepare": "husky install",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc",
+    "lint": "eslint src --ext .tsx,.ts --cache --fix",
+    "prepare": "husky install && npm run build",
+    "prepublishOnly": "npm run test && npm run lint",
+    "version": "npm run lint && git add -A src",
+    "postversion": "git push && git push --tags",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -31,7 +34,9 @@
   },
   "homepage": "https://github.com/vannizhang/react-redux-boilerplate",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@storybook/addon-essentials": "^7.0.24",
     "@storybook/addon-interactions": "^7.0.24",
     "@storybook/addon-links": "^7.0.24",
@@ -41,22 +46,25 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/d3": "^7.4.0",
     "@types/jest": "^26.0.15",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.1",
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "prop-types": "^15.8.1",
+    "rimraf": "^5.0.1",
     "storybook": "^7.0.24",
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.0.5",
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.1.0"
