--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "allowJs": false,
         "jsx": "react-jsx",
         "module": "commonjs",
+        "outDir": "dist",
         "noImplicitAny": true,
         "preserveConstEnums": true,
         "removeComments": true,
@@ -17,20 +18,12 @@
             "./node_modules/@types"
         ],
         "lib": [ "es2015", "dom" ],
-        "paths": {
-            "@components/*": ["./src/components/*"],
-            "@constants/*": ["./src/constants/*"],
-            "@hooks/*": ["./src/hooks/*"],
-            "@services/*": ["./src/services/*"],
-            "@store/*": ["./src/store/*"],
-            "@styles/*": ["./src/styles/*"],
-            "@typing/*": ["./src/types/*"],
-            "@utils/*": ["./src/utils/*"],
-        }
     },
     "exclude": [
         "**/node_modules", 
-        "**/.*/"
+        "**/.*/",
+        "*.stories.ts",
+        "*.stories.tsx"
     ],
     "include": [
         "./src/**/**/*"
