--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "jest --passWithNoTests",
     "clean": "rimraf dist",
-    "copy:css": "copyfiles -f src/styles/*.css dist/styles",
-    "build": "npm run clean && tsc && npm run copy:css",
+    "build": "npm run clean && tsc",
     "lint": "eslint src --ext .tsx,.ts --cache --fix",
     "prepare": "husky install && npm run build",
     "prepublishOnly": "npm run test && npm run lint",
@@ -55,7 +54,6 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "copyfiles": "^2.4.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
