build: use ts-loader and style-loader

--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "prop-types": "^15.8.1",
     "rimraf": "^5.0.1",
     "storybook": "^7.0.24",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
     "typescript": "^4.3.4",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
