--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "d3": "^7.8.5",
+    "d3": "^7.8.5"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.1.0"
   },
