--- a/.babelrc.json
+++ b/.babelrc.json
@@ -12,8 +12,5 @@
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-transform-runtime"
-  ]
+  "plugins": []
 }
