--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "version": "npm run lint && git add -A src",
     "postversion": "git push && git push --tags",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "rimraf docs && storybook build -o docs"
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,json}": [
@@ -37,9 +37,6 @@
   },
   "homepage": "https://github.com/vannizhang/react-redux-boilerplate",
   "devDependencies": {
-    "@babel/core": "^7.22.6",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.22.6",
     "@babel/preset-env": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
@@ -56,7 +53,6 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
@@ -69,6 +65,8 @@
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
     "storybook": "^7.0.24",
     "style-loader": "^3.3.3",
