--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "exclude": [
         "**/node_modules", 
         "**/.*/",
-        "**/*.stories.tsx"
+        "**/*.stories.tsx",
+        "**/*.data.ts"
     ],
     "include": [
         "./src/**/**/*"
